# handy-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml  release.yml
docs/: README_zh.md  api-testing.md  streaming-api.md
plans/: 2026-05-10-SPEC-v1.md  2026-05-10-handy-cli-migration-analysis-v1.md
src/: config.rs  error.rs  main.rs
src/audio/: capture.rs  device.rs  manager.rs  mod.rs
src/commands/: delete.rs  doctor.rs  download.rs  list_models.rs  mod.rs  serve.rs
src/models/: manager.rs  mod.rs  registry.rs
src/server/: api.rs  mod.rs
src/server/handlers/: mod.rs
src/transcriber/: canary.rs  cohere.rs  gigaam.rs  mod.rs  moonshine.rs  parakeet.rs  sensevoice.rs  whisper.rs
src/vad/: mod.rs
