[package]
name = "handy-cli"
version = "0.1.0"
description = "AI transcription CLI tool - extracted from Handy"
authors = ["winsonwq"]
edition = "2021"
license = "MIT"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }

# Async
futures-util = "0.3"
pin-project = "1"
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Audio
cpal = "0.16"
rubato = "0.16"
hound = "3.5"

# VAD
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }

# Transcription - same as Handy
transcribe-rs = { version = "0.3.3", features = ["whisper-cpp", "onnx"] }

# HTTP client (for model download, uses rustls instead of openssl)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.95"
log = "0.4"
env_filter = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
bytes = "1"
once_cell = "1"
chrono = "0.4"
dirs = "5"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
transcribe-rs = { version = "0.3.3", features = ["whisper-vulkan", "ort-directml"] }

[target.'cfg(target_os = "macos")'.dependencies]
transcribe-rs = { version = "0.3.3", features = ["whisper-metal"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
